moved tomcat7 and tomcat7-oracle to their own github repos